--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-requests>=2.28.0
+requests>=2.31.0
 pathlib>=1.0.1
-PyYAML>=6.0
-pytest>=7.0.0
-numpy>=1.22.0
-matplotlib>=3.5.0
+PyYAML>=6.0.1
+pytest>=7.4.0
+numpy>=1.24.0
+matplotlib>=3.7.2
 dataclasses; python_version < '3.7'
-supabase>=0.7.1
-tqdm>=4.64.0
-pandas>=1.4.0
-scikit-learn>=1.0.0
+supabase>=2.0.0
+tqdm>=4.66.1
+pandas>=2.0.3
+scikit-learn>=1.3.0
+plotly>=5.16.0
+colorama>=0.4.6
+tabulate>=0.9.0
+pytest-cov>=4.1.0
+rich>=13.5.0
+typer>=0.9.0
